# dbflux

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  MCP_SERVER_BUG_REPORT.md  QUERY_MIGRATION_SUMMARY.md  README.md  default.nix  flake.nix  query_impl_additions.rs
.atl/: skill-registry.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  style.yml  tests.yml
crates/dbflux/: Cargo.toml
crates/dbflux_audit/: Cargo.toml
crates/dbflux_audit/src/: export.rs  lib.rs  query.rs
crates/dbflux_audit/src/store/: sqlite.rs
crates/dbflux_audit/tests/: audit_service_tests.rs
crates/dbflux_driver_postgres/: Cargo.toml
crates/dbflux_driver_postgres/src/: driver.rs  lib.rs
crates/dbflux_driver_postgres/tests/: ddl_integration.rs  live_integration.rs
crates/dbflux_storage/: Cargo.toml
crates/dbflux_storage/src/: bootstrap.rs  diagnostics.rs  error.rs  export.rs  legacy.rs  lib.rs  paths.rs  reset.rs  sqlite_tree_store.rs
crates/dbflux_storage/src/migrations/: legacy_import.rs  mod.rs  mod_001_initial.rs  mod_005_rpc_service_kind.rs  mod_006_rpc_service_api_contract.rs  mod_008_general_settings_style.rs
crates/dbflux_storage/src/repositories/: audit.rs  auth_profile_fields.rs  auth_profiles.rs  connection_driver_configs.rs  connection_folders.rs  connection_profile_configs.rs  connection_profile_hook_bindings.rs  connection_profile_hooks.rs  connection_profile_settings.rs  connection_profile_value_refs.rs  connection_profiles.rs  driver_overrides.rs  driver_setting_values.rs  driver_settings.rs  general_settings.rs  governance_settings.rs  hook_definitions.rs  legacy_imports.rs  mod.rs  proxy_profiles.rs  services.rs  settings.rs  ssh_tunnel_profiles.rs
crates/dbflux_storage/src/repositories/state/: sessions.rs
crates/dbflux_tunnel_core/: Cargo.toml
crates/dbflux_tunnel_core/src/: lib.rs
docs/: AUDIT.md  DRIVER_RPC_PROTOCOL.md  RELEASE.md  RPC_SERVICES_CONFIG.md
packaging/: dbflux.desktop  nfpm.yaml
scripts/: PKGBUILD
(+383 files in other folders)
