[package]
name = "dbflux_driver_postgres"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
dbflux_core = { path = "../dbflux_core" }
dbflux_ssh = { path = "../dbflux_ssh" }
chrono = "0.4"
hex = "0.4"
log = "0.4"
native-tls = "0.2"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
postgres-native-tls = "0.5"
serde_json = "1"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
dbflux_test_support.workspace = true

[lints]
workspace = true
